--- a/TotalCrossSDK/docs/TotalCross Companion.lyx
+++ b/TotalCrossSDK/docs/TotalCross Companion.lyx
@@ -6859,6 +6859,12 @@ Collections
 \begin_layout Itemize
 
 \family typewriter
+EnumMap 
+\end_layout
+
+\begin_layout Itemize
+
+\family typewriter
 HashMap 
 \end_layout
 
