Updated companion with JSON and switch with strings.

--- a/TotalCrossSDK/docs/TotalCross Companion.lyx
+++ b/TotalCrossSDK/docs/TotalCross Companion.lyx
@@ -6608,6 +6608,10 @@ New features that are now supported and some of them are detailed below:
 \end_layout
 
 \begin_layout Itemize
+JSON;
+\end_layout
+
+\begin_layout Itemize
 enuns;
 \end_layout
 
@@ -6617,6 +6621,10 @@ generics;
 
 \begin_layout Itemize
 for each;
+\end_layout
+
+\begin_layout Itemize
+switch with strings;
 \end_layout
 
 \begin_layout Itemize
