Going back to delim in the docs.

--- a/TotalCrossSDK/docs/TotalCross Companion.lyx
+++ b/TotalCrossSDK/docs/TotalCross Companion.lyx
@@ -7150,7 +7150,7 @@ replaceAll(String regex, String replacement)
 \begin_layout Itemize
 
 \family typewriter
-String[] split(String regex)
+String[] split(String delim)
 \end_layout
 
 \begin_layout Itemize
