--- a/TotalCrossVM/builders/android/apps/tcvm/res/values/strings.xml
+++ b/TotalCrossVM/builders/android/apps/tcvm/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
- Copyright (C) 2010 ZXing authors
+ Copyright (C) 2014 ZXing authors
 
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
@@ -15,24 +15,21 @@
  limitations under the License.
  -->
 <resources>
-  <string name="app_name"></string>
+  <string name="app_name">Barcode Scanner</string>
   <string name="app_picker_name">Applications</string>
   <string name="bookmark_picker_name">Bookmarks</string>
   <string name="button_add_calendar">Add to calendar</string>
   <string name="button_add_contact">Add contact</string>
-  <string name="button_back">Back</string>
   <string name="button_book_search">Book Search</string>
   <string name="button_cancel">Cancel</string>
   <string name="button_custom_product_search">Custom search</string>
   <string name="button_dial">Dial number</string>
-  <string name="button_done">Done</string>
   <string name="button_email">Send email</string>
   <string name="button_get_directions">Get directions</string>
-  <string name="button_google_shopper">Shopper</string>
   <string name="button_mms">Send MMS</string>
   <string name="button_ok">OK</string>
   <string name="button_open_browser">Open browser</string>
-  <string name="button_product_search">Product Search</string>
+  <string name="button_product_search">Product search</string>
   <string name="button_search_book_contents">Search contents</string>
   <string name="button_share_app">Application</string>
   <string name="button_share_bookmark">Bookmark</string>
@@ -72,11 +69,11 @@
   <string name="msg_default_time">Time</string>
   <string name="msg_default_type">Type</string>
   <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
-  <string name="msg_google_books">Google Books</string>
-  <string name="msg_google_product">Google Product Search</string>
-  <string name="msg_google_shopper_missing">Google Shopper is not installed</string>
-  <string name="msg_install_google_shopper">Google Shopper combines barcode scanning with online and local prices, reviews and more without opening the browser. Would you like to try it?</string>
+  <string name="msg_error">Error</string>
+  <string name="msg_google_books">Google</string>
+  <string name="msg_google_product">Google</string>
   <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
+  <string name="msg_invalid_value">Invalid value</string>
   <string name="msg_redirect">Redirect</string>
   <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
   <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
@@ -85,38 +82,48 @@
   <string name="msg_sbc_results">Results</string>
   <string name="msg_sbc_searching_book">Searching book\u2026</string>
   <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
-  <string name="msg_sbc_unknown_page">Unknown page</string>
   <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
-  <string name="msg_share_subject_line">Here are the contents of a barcode I scanned</string>
   <string name="msg_share_text">Or type some text and press Enter</string>
   <string name="msg_sure">Are you sure?</string>
   <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>
   <string name="preferences_actions_title">When a barcode is found\u2026</string>
   <string name="preferences_auto_focus_title">Use auto focus</string>
+  <string name="preferences_auto_open_web_title">Open web pages automatically</string>
   <string name="preferences_bulk_mode_summary">Scan and save many barcodes continuously</string>
   <string name="preferences_bulk_mode_title">Bulk scan mode</string>
   <string name="preferences_copy_to_clipboard_title">Copy to clipboard</string>
   <string name="preferences_custom_product_search_summary" formatted="false">Substitutions: %s = contents, %f = format, %t = type</string>
   <string name="preferences_custom_product_search_title">Custom search URL</string>
-  <string name="preferences_decode_1D_title">1D barcodes</string>
+  <string name="preferences_decode_1D_industrial_title">1D Industrial</string>
+  <string name="preferences_decode_1D_product_title">1D Product</string>
+  <string name="preferences_decode_Aztec_title">Aztec</string>
   <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
+  <string name="preferences_decode_PDF417_title">PDF417 (β)</string>
   <string name="preferences_decode_QR_title">QR Codes</string>
   <string name="preferences_device_bug_workarounds_title">Device Bug Workarounds</string>
+  <string name="preferences_disable_barcode_scene_mode_title">No barcode scene mode</string>
   <string name="preferences_disable_continuous_focus_summary">Use only standard focus mode</string>
   <string name="preferences_disable_continuous_focus_title">No continuous focus</string>
   <string name="preferences_disable_exposure_title">No exposure</string>
+  <string name="preferences_disable_metering_title">No metering</string>
   <string name="preferences_front_light_summary">Improves scanning in low light on some phones, but may cause glare. Does not work on all phones.</string>
   <string name="preferences_front_light_title">Use front light</string>
+  <string name="preferences_front_light_auto">Automatic</string>
+  <string name="preferences_front_light_off">Off</string>
+  <string name="preferences_front_light_on">On</string>
   <string name="preferences_general_title">General settings</string>
+  <string name="preferences_history_summary">Store your scans in History</string>
+  <string name="preferences_history_title">Add to History</string>
+  <string name="preferences_invert_scan_title">Invert scan</string>
+  <string name="preferences_invert_scan_summary">Scan for white barcodes on black background. Not available on some devices.</string>  
   <string name="preferences_name">Settings</string>
+  <string name="preferences_orientation_title">No automatic rotation</string>
   <string name="preferences_play_beep_title">Beep</string>
   <string name="preferences_remember_duplicates_summary">Store multiple scans of the same barcode in History</string>
   <string name="preferences_remember_duplicates_title">Remember duplicates</string>
   <string name="preferences_result_title">Result settings</string>
   <string name="preferences_scanning_title">When scanning for barcodes, decode\u2026</string>
   <string name="preferences_search_country">Search country</string>
-  <string name="preferences_try_bsplus">Try Barcode Scanner+</string>
-  <string name="preferences_try_bsplus_summary">Enhanced with new features and interface</string>
   <string name="preferences_supplemental_summary">Try to retrieve more information about the barcode contents</string>
   <string name="preferences_supplemental_title">Retrieve more info</string>
   <string name="preferences_vibrate_title">Vibrate</string>
@@ -132,8 +139,5 @@
   <string name="result_uri">Found URL</string>
   <string name="result_wifi">Found WLAN Configuration</string>
   <string name="sbc_name">Google Book Search</string>
-  <string name="share_name">Share via barcode</string>
   <string name="wifi_changing_network">Requesting connection to network\u2026</string>
-  <string name="wifi_ssid_label">Network Name</string>
-  <string name="wifi_type_label">Type</string>
 </resources>
